--- a/deploy/podinfo-ingress.yaml
+++ b/deploy/podinfo-ingress.yaml
@@ -9,7 +9,8 @@ metadata:
   namespace: dev
 spec:
   rules:
-  - http:
+  - host: training-user-33.training.weave.works
+    http:
       paths:
       - backend:
           serviceName: podinfo
