--- a/deploy/mighty-fine-ingress.yaml
+++ b/deploy/mighty-fine-ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: traefik
-    traefik.frontend.rule.type: PathPrefixStrip
+    # traefik.frontend.rule.type: PathPrefixStrip
   creationTimestamp: null
   name: mighty-fine
   namespace: dev
