--- a/deploy/podinfo-ingress.yaml
+++ b/deploy/podinfo-ingress.yaml
@@ -9,7 +9,7 @@ metadata:
   namespace: dev
 spec:
   rules:
-  - host: "*.training.weave.works"
+  - host: "*"
     http:
       paths:
       - backend:
