--- a/deploy/mighty-fine-ingress.yaml
+++ b/deploy/mighty-fine-ingress.yaml
@@ -9,8 +9,7 @@ metadata:
   namespace: dev
 spec:
   rules:
-  - host: "*"
-    http:
+  - http:
       paths:
       - backend:
           serviceName: mighty-fine
